2009-11-24  Glenn Morris  <rgm@gnu.org>

	* bookmark.el (bookmark-bmenu-hide-filenames): Remove assignment to
	deleted variable bookmark-bmenu-bookmark-column.

2009-11-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* bookmark.el (bookmark-bmenu-search): Clear echo area when exiting.

2009-11-23  Ken Brown  <kbrown@cornell.edu>  (tiny change)

	* net/browse-url.el (browse-url-filename-alist): On Windows, add
	two slashes to the "file:" prefix.
	(browse-url-file-url): De-munge Cygwin filenames before passing
	them to Windows browser.
	(browse-url-default-windows-browser): Use call-process.

2009-11-23  Juri Linkov  <juri@jurta.org>

	Implement DocView Continuous mode.  (Bug#4896)
	* doc-view.el (doc-view-continuous-mode): New defcustom.
	(doc-view-mode-map): Bind C-n/<down> to
	`doc-view-next-line-or-next-page', C-p/<up> to
	`doc-view-previous-line-or-previous-page'.
	(doc-view-next-line-or-next-page)
	(doc-view-previous-line-or-previous-page): New commands.

2009-11-23  Juri Linkov  <juri@jurta.org>

	Implement Isearch in comint input history.  (Bug#3746)
	* comint.el (comint-mode): Add `comint-history-isearch-setup' to
	`isearch-mode-hook'.
	(comint-history-isearch): New defcustom.
	(comint-history-isearch-backward)
	(comint-history-isearch-backward-regexp): New commands.
	(comint-history-isearch-message-overlay): New buffer-local variable.
	(comint-history-isearch-setup, comint-history-isearch-end)
	(comint-goto-input, comint-history-isearch-search)
	(comint-history-isearch-message, comint-history-isearch-wrap)
	(comint-history-isearch-push-state)
	(comint-history-isearch-pop-state): New functions.

2009-11-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-shell-prompt-pattern): Use \r for carriage
	return.
	(tramp-handle-make-symbolic-link)
	(tramp-handle-dired-compress-file, tramp-handle-expand-file-name):
	Quote file names.
	(tramp-send-command-and-check): New argument DONT-SUPPRESS-ERR.
	(tramp-handle-process-file): Use it.
